--- a/resources/assets/sass/includes/_content.sass
+++ b/resources/assets/sass/includes/_content.sass
@@ -134,6 +134,7 @@
           img
             position: absolute
             top: 50%
+            width: 75%
             min-height: 100%
             display: block
             left: 50%
